# provable-prime-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
e16-primes/: Cargo.toml  build.rs
primes/: Cargo.toml  build.rs
primes/src/: lib.rs
src/: main.rs
