[package]
name = "provable-prime-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.1", features = ["termination"] }
numext-fixed-uint = { version = "0.1.6" }
rand = "0.8.5"
rayon = "1.8.0"
primes = { path = "primes" }

[features]
default = []
ignore-overflow = []

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
codegen-units = 1
